[project]
name = "email-triage-env"
version = "0.1.0"
description = "OpenEnv Email Triage Environment"
authors = [{ name="Karan Punwatkar" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai"
]

[tool.setuptools]
packages = ["my_env"]